5th attempt, 33 seconds